# gin-svc/internal/web/controller/public_controller.go
@@ -25,7 +25,7 @@ func NewPublicController(userSvc service.UserSvc) BaseController {
 // @Produce json
 // @Param user body types.UserForm true "user"
 // @Success 200 {object} map[string]any
-// @Router /api/v1/na/register [put]
+// @Router /api/v1/na/register [post]
 func (p *publicController) RegisterUser(ctx *gin.Context, req types.UserForm) (result ginx.JsonResult, err error) {
 	err = p.userSvc.RegisterUser(ctx, req)
 	if err != nil {
@@ -34,6 +34,24 @@ func (p *publicController) RegisterUser(ctx *gin.Context, req types.UserForm) (r
 	return ginx.Success(), nil
 }
 
+// LoginCtl godoc
+// @Summary LoginCtl
+// @Description LoginCtl
+// @Tags NA Model
+// @Accept json
+// @Produce json
+// @Param user body types.LoginForm true "user"
+// @Success 200 {object} map[string]any
+// @Router /api/v1/na/login [post]
+func (p *publicController) LoginCtl(ctx *gin.Context, req types.LoginForm) (result ginx.JsonResult, err error) {
+	err = p.userSvc.PwdLogin(ctx, req)
+	if err != nil {
+		return ginx.Error(10011, "登陆失败"), err
+	}
+	return ginx.Success(), nil
+}
+
 func (p *publicController) RegisterRoute(group *gin.RouterGroup) {
-	group.PUT("/register", ginx.WrapJsonBody[types.UserForm](p.RegisterUser))
+	group.POST("/register", ginx.WrapJsonBody[types.UserForm](p.RegisterUser))
+	group.POST("/login", ginx.WrapJsonBody[types.LoginForm](p.LoginCtl))
 }
